feat: algumas melhorias e adcionando dockerfile